startbootstrap-landing-page-gh-pages/css/landing-page.css
/*
 * Start Bootstrap - Landing Page (http://startbootstrap.com/)
 * Copyright 2013-2016 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */

body,
html {
    width: 100%;
    height: 100%;
    /*overflow-x: hidden;*/
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}

.body{
    position: relative;
}

.topnav {
    font-size: 14px; 
}

.lead {
    font-size: 18px;
    font-weight: 400;
}

.nav li.active a{
    background: #99b8ff;
}

.navbar-inverse .navbar-brand {
    font-family: "KaushanScriptRegular","Helvetica Neue",Helvetica,Arial,cursive;
    float: left;
    height: 50px;
    font-size: 22px;
    font-weight: 700;
    color: #CCDBFF;
}

.navbar-inverse .navbar-nav>.active>a {
    border-radius: 5px;
    color: #222222;
    background-color: #CCDBFF;
}

.navbar-inverse .navbar-nav>.active>a:focus {
    border-radius: 5px;
    color: #222222;
    background-color: #CCDBFF;
}

.navbar-inverse .navbar-nav>.active>a:hover {
    border-radius: 5px;
    color: #222222;
    background-color: #99b8ff;
}

.navbar-inner {
    min-height: 0px;
}

.navbar-inverse .navbar-pills>li>a {
    padding-top: 15px;
    padding-bottom: 15px;
}

.nav>li>a {
    display: block;
}

.navbar-brand,
.navbar-nav li a {
    line-height: 65px;
    height: 65px;
    padding-top: 0;
}

.page-scroll{
    font-size: 14px;
}

.navbar-inverse .nav li a:hover {
    border-radius: 5px;
    color: #CCDBFF;
}

.navbar-inverse .navbar-nav>.active>a {
    border-radius: 5px;
}

.navbar-inverse .nav li a {
    text-transform: uppercase;
    float: right;
    font-weight: 600;
    letter-spacing: 1px;
}

.intro-header {
    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
    padding-bottom: 50px;
    text-align: center;
    color: #f8f8f8;
    background: url(../img/portland-bg.jpg) no-repeat center center;
    background-size: cover;
}

.intro-message {
    position: relative;
    padding-top: 20%;
    padding-bottom: 20%;
}

.intro-message > h1 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 5em;
}

.intro-divider {
    width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0,0,0,0.2);
}

.intro-message > h3 {
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
}

@media(max-width:767px) {
    .intro-message {
        padding-bottom: 15%;
    }

    .intro-message > h1 {
        font-size: 3em;
    }

    ul.intro-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.intro-social-buttons > li:last-child {
        margin-bottom: 0;
    }

    .intro-divider {
        width: 100%;
    }
}

.closeButton {
    padding: 10px 0;
    position: absolute;
    top: 0;
    right: 30px;
}

.modal-header {
    padding-top: 35px;
}

.modal-header .close {
    font-size: 80px;
    font-weight: 100;
}

.skillsModal {
    padding: 50px 30px;
}

.modal-footer {
    text-align: center;
    padding-top: 25px;
    text-transform: uppercase;
}

.btn-modal {
    background-color: #CCDBFF;
    color: #fff;
}

.modal-body a {
    color: #004d99;
}

.modal-body a:hover {
    color: #004d99;
}

.summaryBody{
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 500;
    text-align: left;
    font-size: 14px;
}

.paragraphBody{
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 500;
    font-size: 15px;
    text-align: left;
    margin-bottom: 10px;
}

#cLang{
    left: -5px;
}

.network-name {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
}

.content-section-a {
    padding: 50px 0;
    background-color: #CCDBFF;
	margin-bottom: 0px;
}

.content-section-b {
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 70px;
    padding-top: 55px;
    border: 0;
    background-color: #ADC1FF;
	margin-bottom: 0px;
}

.content-section-d {
    padding: 50px 0;
    background-color: #CCDBFF;
	margin-bottom: 0px;
}

.content-section-c {
	padding: 50px 0;
	background-color: #ADC1FF;
	margin-bottom: 0px;
}

.portfolio-item h4 {
    padding: 8px 0;
}

.content-section-b .container {
    padding-bottom: 10px;
}

.portfolio-link:hover{
	opacity: 0;
	/*background-color: #f7f7f7;*/
    background-color: #ADC1FF;
	transition: all ease 0.5s;
}

.portfolio-hover{
	-webkit-transition: all 0.8s ease;
	-moz-transition: all 0.8s ease;
	-o-transition: all 0.8s ease;
	-ms-transition: all 0.8s ease;
	transition: all 0.8s ease;
}

.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 167px;
    right: 0;
    height: 250px;
    width: 250px;
    opacity: 0;
    transition: .8s ease;
    background-color: #7FA3FF;  
}

.portfolio-hover:hover .overlay {
    opacity: 0.8;
}

.overlay .fa {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}

.portfolio-hover img:hover{
    transition: all ease 0.8s;
/*	-webkit-filter: grayscale(55%);*/
    background-color: #7FA3FF;
}

.portfolio-caption {
	margin: 0 auto;
	padding: 25px;
	max-width: 400px;
	text-align: center;
}

.portfolio-caption h4 {
	margin-bottom: 10px;
}

.portfolio-caption p {
	margin: 0;
	font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 16px;
	font-style: italic;
	font-weight: 500;
	line-height: 30px;
}
.heading-item {
	margin-bottom: 50px;
}

.row {
	margin-bottom: 10px;
}

.resume {
    text-align: center;
}

.resume a {
    color: #005ab3;
}

.resume a:hover {
    color: #003366;
}

.resume a:visited {
    color: #003366;
}

.about{
	color: #777777;
	padding-bottom: 50px;
    padding-left: 55px;
    padding-right: 55px;

}

.about p {
	font-size: 17px;
	font-weight: 500;
	line-height: 50px;
    color: #464646;
}

.about a {
    padding-top: 10px;
    text-align: center;
    font-size: 24px;
	font-weight: 500;
	line-height: 50px;
}

.section-heading {
    margin-bottom: 30px;
}

.section-heading-spacer {
    float: left;
    width: 200px;
    border-top: 3px solid #e7e7e7;
}

.skill-item {
	margin-bottom: 30px;
}

.quote-item {
    font-family: "Droid Serif", "Helvetica Neue", Arial, sans-serif; 
    font-size: 18px;
    font-style: italic;
    font-weight: 400;
    color: #464646;
}

.subHeading-item {
    margin-bottom: 15px;
}

.banner {
    padding: 130px 0;
    color: #f8f8f8;
    background: url(../img/portland-footer.png) no-repeat center center;
    background-size: cover;
}

.banner h2 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 3em;
}

.banner ul {
    margin-bottom: 0;
}

.banner-social-buttons {
    float: right;
    margin-top: 0;
}

.contactButtons {
    padding-top: 50px;
    padding-bottom: 10px;
    font-size: 40px;
}

h3.section-subheading {
    padding-bottom: 50px;
    text-transform: none;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
    font-weight: 400;
}

h3.section-subheading .text-muted {
    padding-bottom: 50px;
    padding-top: 0;
    text-transform: none;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
    font-weight: 400;
}

a {
    color: #b0e0e6;
}

a:hover, a:focus, a:active {
    outline: 0;
    color: #76c9d4;
}

.social-buttons {
    padding-bottom: 0;
}

@media(max-width:1199px) {
    ul.banner-social-buttons {
        float: left;
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    .banner h2 {
        margin: 0;
        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
        font-size: 3em;
    }

    ul.banner-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons > li:last-child {
        margin-bottom: 0;
    }
}

@media(max-width:767px){
  .content-section-b{
    padding-left: 7px;
    text-align: center;
  }
}

@media(max-width:767px){
  .content-section-b .section-heading {
    padding-left: 45px;
    text-align: center;
  }
}

@media(max-width:767px){
    .content-section-b h4, .content-section-b .portfolio-button {
    padding-left: 45px;
    padding-right: 0;
    text-align: center;
  }
}

@media(max-width:767px){
    body, html {
        overflow-x: hidden;
    }
}

footer {
    padding-top: 20px;
    padding-bottom: 50px;
    background-color: #ADC1FF;
    text-align: center;
}

footer .row {
    margin-bottom: 10px;
}

.list-inline {
    padding-left: 0;
    margin-left: -5px;
    list-style: none;
}

ul.social-buttons li a {
    display: block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 40px;
    outline: 0;
    color: #fff;
    background-color: #002B5C;
    transition: all .3s;
}

ul.social-buttons li a:hover {
    background-color: #3593ff;
}

.wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

.wrapper ul.social-buttons {
    text-align: center;
    width: 100%;
}

p.copyright {
    margin: 15px 0 0;
}

